--- a/fonctionnalites-abla-analytics.html
+++ b/fonctionnalites-abla-analytics.html
@@ -101,6 +101,7 @@ title: "Nos fonctionnalités | Mesure d'audience alternative à Google Analytics
                    <p>Choissiez les créneaux qui vous importe : jour, semaine, mois, année ou dates personnalisées.</p>
                 </div>
              </div>
+             <div class="content-grid__button"> </div>
           </div>
        </div>
     </div>
