--- a/fonctionnalites-abla-analytics.html
+++ b/fonctionnalites-abla-analytics.html
@@ -109,15 +109,13 @@ title: "Nos fonctionnalités | Mesure d'audience alternative à Google Analytics
                    <h3 class="heading ts-h4 mb-0-5">Export Excel et API</h3>
                    <p>Exportez et exploitez vos données au format Excel ou via API (Bientôt).</p>
                 </div>
-             </div>
-             <div class="content-grid__blocks">
+
                 <div class="content-block mt-3-5">
                    <div class="content-block_image mb-1" data-type="icon"> <img alt="Géolocalisation +" width="401" height="301" src="assets/images/geolocalisation.png" data-loaded="true" style="visibility: visible;" class="img-loaded"> </div>
                    <h3 class="heading ts-h4 mb-0-5">Géolocalisation +</h3>
                    <p>Abla peut aller au delà du pays, et indiquer de quelle région ou de quelle ville proviennent vos visiteurs.</p>
                 </div>
-             </div>
-             <div class="content-grid__blocks">
+
                 <div class="content-block mt-3-5">
                    <div class="content-block_image mb-1" data-type="icon"> <img alt="Multi-comptes" width="401" height="301" src="assets/images/multi-comptes.png" data-loaded="true" style="visibility: visible;" class="img-loaded"> </div>
                    <h3 class="heading ts-h4 mb-0-5">Multi-comptes</h3>
@@ -130,15 +128,13 @@ title: "Nos fonctionnalités | Mesure d'audience alternative à Google Analytics
                    <h3 class="heading ts-h4 mb-0-5">Vue comparative</h3>
                    <p>Comparez simplement les données de vos sites, vos pages, ou vos filtres.</p>
                 </div>
-             </div>
-             <div class="content-grid__blocks">
+
                 <div class="content-block mt-3-5">
                    <div class="content-block_image mb-1" data-type="icon"> <img alt="Objectifs et évènements" width="401" height="301" src="assets/images/objectifs.png" data-loaded="true" style="visibility: visible;" class="img-loaded"> </div>
                    <h3 class="heading ts-h4 mb-0-5">Objectifs et évènements</h3>
                    <p>Définissez des objectifs à atteindre en terme de clics, de téléchargements, d'achats, de survols ou de validations de formulaires. (Bientôt)</p>
                 </div>
-             </div>
-             <div class="content-grid__blocks">
+
                 <div class="content-block mt-3-5">
                    <div class="content-block_image mb-1" data-type="icon"> <img alt="Filtres +" width="401" height="301" src="assets/images/filtres.png" data-loaded="true" style="visibility: visible;" class="img-loaded"> </div>
                    <h3 class="heading ts-h4 mb-0-5">Filtres +</h3>
@@ -215,8 +211,8 @@ title: "Nos fonctionnalités | Mesure d'audience alternative à Google Analytics
               </tr>
               <tr>
                 <td style="text-align: left">Prix</td>
-                <td style="text-align: left">Gratuit</td>
-                <td style="text-align: left">A partir de 15€ HT/ mois</td>
+                <td style="text-align: left"><a class="blanc" href="https://abla.io/alternative-google-analytics-pas-cher.html" title="Alternative gratuite à Google Analytics">Gratuit</a></td>
+                <td style="text-align: left"><a class="blanc" href="https://abla.io/alternative-google-analytics-pas-cher.html" title="Alternative payante à Google Analytics">A partir de 15€ HT/ mois</a></td>
               </tr>
 
             </tbody>
