--- a/alternative-google-analytics-pas-cher.html
+++ b/alternative-google-analytics-pas-cher.html
@@ -36,7 +36,7 @@ title: "Notre offre tarifaire | Mesure d'audience alternative à Google Analytic
                    <p>Avec Abla Analytics Plus, vous bénéficiez de nouvelles fonctionnalités telles que l'export de données, ou le multicompte utilisateur.</p>
                 </div>
              </div>
-             <div class="headingImage__image mt-1 "> <img alt="" title="" src="assets/images/start.webp" sizes="(max-width: 567px) 94.35vw, (max-width: 999px) 40.54vw, (max-width: 1232px) 36.14vw, (max-width: 1920px) 70vw, 600px" data-loaded="true" style="visibility: visible;" class="img-loaded"> </div>
+             <div class="headingImage__image mt-1 "> <img alt="" title="" src="assets/images/top.webp" sizes="(max-width: 567px) 94.35vw, (max-width: 999px) 40.54vw, (max-width: 1232px) 36.14vw, (max-width: 1920px) 70vw, 600px" data-loaded="true" style="visibility: visible;" class="img-loaded"> </div>
           </div>
        </div>
     </div>
