--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ pagination:
                     <p class="ts-lede tf-bold" itemprop="name">Est-il possible de tester gratuitement Abla ?</p>
                     <div itemscope="" itemprop="acceptedAnswer" itemtype="https://schema.org/Answer">
                        <div itemprop="text">
-                          <p>Oui. Abla Analytics Standard est une solution totalement grauite. Vous bénéficiez d'un quota de 50k hits/visites. </p>
+                          <p>Oui. Abla Analytics Standard est une solution totalement grauite. Vous bénéficiez d'un quota mensuel de 50k hits/visites. </p>
                        </div>
                     </div>
                  </div>
